--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
 html {
   font-size: 62.5%;
   font-family: "Montserrat", sans-serif;
-  box-sizing: border-box; 
+  box-sizing: border-box;
 }
 *,
 *:before,
@@ -33,7 +33,8 @@ h3 {
 h4 {
   font-size: 1.9rem;
 }
-p {
+p,
+a {
   font-size: 1.3rem;
 }
 
@@ -46,6 +47,10 @@ p {
   padding: 0;
 }
 
+a {
+  text-decoration: none;
+  color: rgb(248, 248, 248);
+}
 .container {
   max-width: 100rem;
   margin: 0 auto;
