--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,13 +3,14 @@
 html {
   font-size: 62.5%;
   font-family: "Montserrat", sans-serif;
-  box-sizing: border-box;
+  height: 100%;
+  background-color:#f9f6f4 ;
 }
 *,
-*:before,
+/* *:before,
 *:after {
   box-sizing: inherit;
-}
+} */
 
 body {
   margin: 0;
@@ -51,7 +52,11 @@ a {
   text-decoration: none;
   color: rgb(248, 248, 248);
 }
-.container {
+/* .container {
   max-width: 100rem;
   margin: 0 auto;
+} */
+
+.appContainer{
+  height: 100%
 }
