--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@ html {
   font-size: 62.5%;
   font-family: "Montserrat", sans-serif;
   height: 100%;
-  background-color:#f9f6f4 ;
+  background-color: #f9f6f4;
 }
 *,
 /* *:before,
@@ -52,11 +52,11 @@ a {
   text-decoration: none;
   color: rgb(248, 248, 248);
 }
-/* .container {
+.container {
   max-width: 100rem;
   margin: 0 auto;
-} */
+}
 
-.appContainer{
-  height: 100%
+.appContainer {
+  height: 100%;
 }
