--- a/client/src/index.css
+++ b/client/src/index.css
@@ -61,7 +61,9 @@ a {
   height: 100%;
   background-color: #f9f6f4;
 }
-
+#root{
+  height:100%;
+}
 /* .footer{
   display: flex;
   align-self: baseline;
