--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,6 +15,7 @@ html {
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 img {
@@ -53,7 +54,8 @@ a {
   color: rgb(248, 248, 248);
 }
 .container {
-  max-width: 100rem;
+  /* max-width: 100rem; */
+  width: 100%;
   margin: 0 auto;
 }
 
