--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,6 +17,7 @@ html {
   font-family: "Montserrat", sans-serif;
   height: 100%;
   background-color: #f9f6f4;
+  box-sizing: border-box;
 }
 *,
 *:before,
